rick-and-morty/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-api-service
spec:
  type: ClusterIP
  selector:
    app: pokemon-api
  ports:
    - port: 5000
      targetPort: 5000
