rick-and-morty/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokemon-api-ingress
spec:
  rules:
    - host: pokemon.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pokemon-api-service
                port:
                  number: 5000
